// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog matches snapshots for closed Dialog. 1`] = `null`;

exports[`Dialog matches snapshots for modal Dialog. 1`] = `
<div
  className="tm-modal"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="tm-dialog-container"
  >
    <div
      className="tm-dialog-header "
    >
      <div
        className="tm-header-left"
      />
      <div
        className="tm-button tm-dialog-close-bt"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          fill="currentColor"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
    <div
      className="tm-dialog-body"
    >
      <span>
        content
      </span>
    </div>
  </div>
</div>
`;

exports[`Dialog matches snapshots for normal Dialog. 1`] = `
<div
  className="tm-dialog react-draggable"
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "display": "block",
      "touchAction": "none",
      "transform": "translate(0px,0px)",
    }
  }
  transform={null}
>
  <div
    className="tm-dialog-container"
  >
    <div
      className="tm-dialog-header tm-dialog-draggable"
    >
      <div
        className="tm-header-left"
      />
      <span>
        Example Dialog
      </span>
      <div
        className="tm-button tm-dialog-close-bt"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          fill="currentColor"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
    <div
      className="tm-dialog-body"
    >
      <span>
        content
      </span>
    </div>
  </div>
</div>
`;
